fix intro align

--- a/styles/home.css
+++ b/styles/home.css
@@ -269,10 +269,6 @@ section.text > .container {
     padding-bottom: 300px;
 }
 
-#intro p {
-    text-align: left;
-}
-
 @media (min-width: 500px) {
     #intro {
         background-position: 178% 112%;
